@@ -15,6 +15,7 @@ import vn.fu_ohayo.repository.VocabularyRepository;
 import vn.fu_ohayo.service.VocabularyService;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class VocabularyServiceImp implements VocabularyService {
@@ -29,24 +30,31 @@ public class VocabularyServiceImp implements VocabularyService {
     }
 
     @Override
+    public List<VocabularyResponse> getVocabularysByFavoriteVocabularyId(int id) {
+        return vocabularyRepository.findAllByFavoriteVocabularyId(id).stream()
+                .map(vocabularyMapper::toVocabularyResponse)
+                .toList();
+    }
+
+    @Override
     public List<VocabularyResponse> getAllVocabularies(int lessonId) {
         Lesson lesson = lessonRepository.getLessonByLessonId(lessonId).orElseThrow(
                 () -> new AppException(ErrorEnum.LESSON_NOT_FOUND)
         );
-        return vocabularyRepository.findAllByLesson(lesson)
-                .stream().map(vocabularyMapper::toVocabularyResponse).toList();
+        List<Vocabulary> vocabularies = lesson.getVocabularies();
+        return vocabularies.stream().map(vocabularyMapper::toVocabularyResponse).collect(Collectors.toList());
     }
 
     @Override
-    public VocabularyResponse handleSaveVocabulary(int lessonId, VocabularyRequest vocabularyRequest) {
+    public VocabularyResponse handleSaveVocabulary(int lessonId,VocabularyRequest vocabularyRequest) {
         Lesson lesson = lessonRepository.getLessonByLessonId(lessonId).orElseThrow(
                 () -> new AppException(ErrorEnum.LESSON_NOT_FOUND)
         );
 
-        if(vocabularyRepository.existsByKanjiAndKanaAndMeaningAndLesson(vocabularyRequest.getKanji(),
+        if(vocabularyRepository.existsByKanjiAndKanaAndMeaningAndLessonId(vocabularyRequest.getKanji(),
                 vocabularyRequest.getKana(),
-                vocabularyRequest.getMeaning(),
-                lesson)){
+                vocabularyRequest.getMeaning(), lessonId
+           )){
             throw new AppException(ErrorEnum.VOCABULARY_EXISTS);
         }
         Vocabulary vocabulary = Vocabulary.builder()
@@ -58,7 +66,6 @@ public class VocabularyServiceImp implements VocabularyService {
                 .jlptLevel(vocabularyRequest.getJlptLevel())
                 .example(vocabularyRequest.getExample())
                 .description(vocabularyRequest.getDescription())
-                .lesson(lesson)
                 .build();
         vocabularyRepository.save(vocabulary);
         return vocabularyMapper.toVocabularyResponse(vocabulary);
@@ -66,17 +73,12 @@ public class VocabularyServiceImp implements VocabularyService {
 
     @Override
     public VocabularyResponse updatePutVocabulary(int vocabularyId, VocabularyRequest vocabularyRequest) {
-        Lesson lesson = lessonRepository.getLessonByLessonId(vocabularyRequest.getLessonId()).orElseThrow(
-                () -> new AppException(ErrorEnum.LESSON_NOT_FOUND)
-        );
-
         Vocabulary vocabulary = vocabularyRepository.findById(vocabularyId).orElseThrow(
                 () -> new AppException(ErrorEnum.VOCABULARY_NOT_FOUND)
         );
-        if(vocabularyRepository.existsByKanjiAndKanaAndMeaningAndLessonAndVocabularyIdNot(vocabularyRequest.getKanji(),
-                    vocabularyRequest.getKana(),
+        if(vocabularyRepository.existsDuplicateVocabularyExceptId(vocabularyRequest.getKanji(),
                     vocabularyRequest.getMeaning(),
-                    lesson, vocabularyId)){
+                    vocabularyId)){
                 throw new AppException(ErrorEnum.VOCABULARY_EXISTS);
         }
         if(vocabularyRequest.getKanji() != null) {
@@ -107,17 +109,12 @@ public class VocabularyServiceImp implements VocabularyService {
     }
 
     @Override
-    public VocabularyResponse updatePatchVocabulary(int vocabularyId, VocabularyRequest vocabularyRequest) {
-        return null;
-    }
-
-    @Override
     public void deleteVocabularyById(int vocabularyId) {
         Vocabulary vocabulary = vocabularyRepository.findById(vocabularyId).orElseThrow(
                 () -> new AppException(ErrorEnum.VOCABULARY_NOT_FOUND)
         );
-        vocabularyRepository.delete(vocabulary);
-
+        vocabulary.setDeleted(true);
+        vocabularyRepository.save(vocabulary);
     }
 
     @Override
@@ -126,13 +123,34 @@ public class VocabularyServiceImp implements VocabularyService {
         Lesson lesson = lessonRepository.getLessonByLessonId(lessonId).orElseThrow(
                 () -> new AppException(ErrorEnum.LESSON_NOT_FOUND)
         );
-        return vocabularyRepository.findAllByLesson(PageRequest.of(page, size), lesson)
+        return vocabularyRepository.findAllByLessonId( lesson.getLessonId(), PageRequest.of(page, size))
                 .map(vocabularyMapper::toVocabularyResponse);
     }
 
     @Override
-    public Page<VocabularyResponse> getAllVocabularíesPage(int page, int size) {
-        return vocabularyRepository.findAll(PageRequest.of(page, size))
+    public Page<VocabularyResponse> getAllVocabulariesPage(int page, int size) {
+        return vocabularyRepository.findAllByDeleted(false,PageRequest.of(page, size))
                 .map(vocabularyMapper::toVocabularyResponse);
+    }
+
+    @Override
+    public VocabularyResponse handleSaveVocabulary(VocabularyRequest vocabularyRequest) {
+        Vocabulary existingVocabulary = vocabularyRepository.findAllByKanjiAndKanaAndMeaning(
+                vocabularyRequest.getKanji(),
+                vocabularyRequest.getKana(),
+                vocabularyRequest.getMeaning()
+        );
+        if(existingVocabulary != null) {
+            if(existingVocabulary.getDeleted() == false) {
+                throw new AppException(ErrorEnum.VOCABULARY_EXISTS);
+            } else{
+                updatePutVocabulary(existingVocabulary.getVocabularyId(), vocabularyRequest);
+                existingVocabulary.setDeleted(false);
+                return vocabularyMapper.toVocabularyResponse(vocabularyRepository.save(existingVocabulary));
+            }
+        }
+        Vocabulary vocabulary = vocabularyMapper.toVocabulary(vocabularyRequest);
+        vocabulary.setDeleted(false);
+        return vocabularyMapper.toVocabularyResponse(vocabularyRepository.save(vocabulary));
     }
 }
